force-app/main/default/objects/Customer_Satisfaction_Surveys__c/Customer_Satisfaction_Surveys__c.object-meta.xml
<CustomObject>
    <label>Customer Satisfaction Surveys</label>
    <nameField>
        <displayFormat>CSS{YYYY}{MM}{00000000}</displayFormat>
        <label>Customer Satisfaction Surveys No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Satisfaction Surveys</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>