force-app/main/default/objects/Customer_Satisfaction_Surveys__c/fields/Aircraft_Type__c.field-meta.xml
<CustomField>
    <fullName>Aircraft_Type__c</fullName>
    <label>Aircraft Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>32Q</fullName>
            </value>
            <value>
                <fullName>339</fullName>
            </value>
            <value>
                <fullName>359</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>