force-app/main/default/objects/Customer_Satisfaction_Surveys__c/fields/Booking_class__c.field-meta.xml
<CustomField>
    <fullName>Booking_class__c</fullName>
    <label>Booking class</label>
    <length>10</length>
    <type>Text</type>
</CustomField>