force-app/main/default/objects/Customer_Satisfaction_Surveys__c/fields/Cabin_Class__c.field-meta.xml
<CustomField>
    <fullName>Cabin_Class__c</fullName>
    <label>Cabin Class</label>
    <length>10</length>
    <type>Text</type>
</CustomField>