force-app/main/default/objects/Customer_Satisfaction_Surveys__c/fields/Departing_Airport__c.field-meta.xml
<CustomField>
    <fullName>Departing_Airport__c</fullName>
    <label>Departing Airport</label>
    <length>18</length>
    <type>Text</type>
</CustomField>