force-app/main/default/objects/Customer_Satisfaction_Surveys__c/fields/Departing_Airport_Chinese__c.field-meta.xml
<CustomField>
    <fullName>Departing_Airport_Chinese__c</fullName>
    <label>Departing Airport(Chinese)</label>
    <length>18</length>
    <type>Text</type>
</CustomField>