force-app/main/default/objects/Customer_Satisfaction_Surveys__c/fields/Departing_Date__c.field-meta.xml
<CustomField>
    <fullName>Departing_Date__c</fullName>
    <label>Departing Date</label>
    <type>Date</type>
</CustomField>