force-app/main/default/objects/Customer_Satisfaction_Surveys__c/fields/Departing_Date_CN__c.field-meta.xml
<CustomField>
    <fullName>Departing_Date_CN__c</fullName>
    <formula>TEXT(YEAR( Departing_Date__c ))&amp;&quot;年&quot; &amp; TEXT(MONTH( Departing_Date__c ))&amp;&quot;月&quot;&amp;TEXT(DAY( Departing_Date__c ))&amp;&quot;日&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Departing Date (CN)</label>
    <type>Text</type>
</CustomField>