force-app/main/default/objects/Customer_Satisfaction_Surveys__c/fields/Departing_Flight_Number__c.field-meta.xml
<CustomField>
    <fullName>Departing_Flight_Number__c</fullName>
    <label>Departing Flight Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>