force-app/main/default/objects/Customer_Satisfaction_Surveys__c/fields/Destination_Airport_Chinese__c.field-meta.xml
<CustomField>
    <fullName>Destination_Airport_Chinese__c</fullName>
    <label>Destination Airport (Chinese)</label>
    <length>18</length>
    <type>Text</type>
</CustomField>