force-app/main/default/objects/Customer_Satisfaction_Surveys__c/fields/Draw__c.field-meta.xml
<CustomField>
    <fullName>Draw__c</fullName>
    <defaultValue>false</defaultValue>
    <description>中獎</description>
    <label>Draw</label>
    <type>Checkbox</type>
</CustomField>