force-app/main/default/objects/Customer_Satisfaction_Surveys__c/fields/Drawing_Name__c.field-meta.xml
<CustomField>
    <fullName>Drawing_Name__c</fullName>
    <formula>Drawing_No__r.Drawing_Name__c</formula>
    <label>Drawing Name</label>
    <type>Text</type>
</CustomField>