force-app/main/default/objects/Customer_Satisfaction_Surveys__c/fields/Drawing_No__c.field-meta.xml
<CustomField>
    <fullName>Drawing_No__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Drawing No.</label>
    <referenceTo>Lucky_Draw_Setting__c</referenceTo>
    <relationshipLabel>Customer Satisfaction Surveys</relationshipLabel>
    <relationshipName>Customer_Satisfaction_Surveys</relationshipName>
    <type>Lookup</type>
</CustomField>