force-app/main/default/objects/Customer_Satisfaction_Surveys__c/fields/Drawing_URL__c.field-meta.xml
<CustomField>
    <fullName>Drawing_URL__c</fullName>
    <formula>Drawing_No__r.Drawing_URL__c</formula>
    <label>Drawing URL</label>
    <type>Text</type>
</CustomField>