force-app/main/default/objects/Customer_Satisfaction_Surveys__c/fields/Email_Address_For_Lucky_Draw__c.field-meta.xml
<CustomField>
    <fullName>Email_Address_For_Lucky_Draw__c</fullName>
    <description>NIQ 提供填表人電子信箱</description>
    <label>Email Address (For Lucky Draw)</label>
    <type>Email</type>
</CustomField>