force-app/main/default/objects/Customer_Satisfaction_Surveys__c/fields/Email_Duplicate_Check__c.field-meta.xml
<CustomField>
    <fullName>Email_Duplicate_Check__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Email Duplicate Check</label>
    <type>Checkbox</type>
</CustomField>