force-app/main/default/objects/Customer_Satisfaction_Surveys__c/fields/F_Send_Count__c.field-meta.xml
<CustomField>
    <fullName>F_Send_Count__c</fullName>
    <formula>IF(URL__c&lt;&gt;NULL,1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Send Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>