force-app/main/default/objects/Customer_Satisfaction_Surveys__c/fields/Gender__c.field-meta.xml
<CustomField>
    <fullName>Gender__c</fullName>
    <formula>IF(
OR(
TEXT(Passenger_Title__c) = &quot;MR&quot;,
TEXT(Passenger_Title__c) = &quot;MSTR&quot;
),
&quot;Male&quot;,
IF(
OR(
TEXT(Passenger_Title__c) = &quot;MRS&quot;,
TEXT(Passenger_Title__c) = &quot;MS&quot;,
TEXT(Passenger_Title__c) = &quot;MISS&quot;
),
&quot;Female&quot;,
&quot;Unknown&quot;
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Gender</label>
    <type>Text</type>
</CustomField>