force-app/main/default/objects/Customer_Satisfaction_Surveys__c/fields/Lucky_No__c.field-meta.xml
<CustomField>
    <fullName>Lucky_No__c</fullName>
    <label>Lucky No</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>