force-app/main/default/objects/Customer_Satisfaction_Surveys__c/fields/Mail__c.field-meta.xml
<CustomField>
    <fullName>Mail__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Mail</label>
    <type>Checkbox</type>
</CustomField>