force-app/main/default/objects/Customer_Satisfaction_Surveys__c/fields/MemberNo__c.field-meta.xml
<CustomField>
    <fullName>MemberNo__c</fullName>
    <label>MemberNo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>