force-app/main/default/objects/Customer_Satisfaction_Surveys__c/fields/Passenger_Title__c.field-meta.xml
<CustomField>
    <fullName>Passenger_Title__c</fullName>
    <label>Passenger Title</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>MR</fullName>
            </value>
            <value>
                <fullName>MSTR</fullName>
            </value>
            <value>
                <fullName>MS</fullName>
            </value>
            <value>
                <fullName>MISS</fullName>
            </value>
            <value>
                <fullName>DR</fullName>
            </value>
            <value>
                <fullName>MRS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>