force-app/main/default/objects/Customer_Satisfaction_Surveys__c/fields/STD__c.field-meta.xml
<CustomField>
    <fullName>STD__c</fullName>
    <label>STD</label>
    <length>30</length>
    <type>Text</type>
</CustomField>