force-app/main/default/objects/Customer_Satisfaction_Surveys__c/fields/Survey_Send__c.field-meta.xml
<CustomField>
    <fullName>Survey_Send__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Survey Send</label>
    <type>Checkbox</type>
</CustomField>