force-app/main/default/objects/Customer_Satisfaction_Surveys__c/fields/Survey_URL__c.field-meta.xml
<CustomField>
    <fullName>Survey_URL__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Survey URL</label>
    <referenceTo>Survey_URL__c</referenceTo>
    <relationshipLabel>Customer Satisfaction Surveys</relationshipLabel>
    <relationshipName>SurveyURL_Customer_Satisfaction_Surveys</relationshipName>
    <type>Lookup</type>
</CustomField>