force-app/main/default/objects/Customer_Satisfaction_Surveys__c/fields/Ticket_buying_date__c.field-meta.xml
<CustomField>
    <fullName>Ticket_buying_date__c</fullName>
    <label>Ticket buying date</label>
    <type>Date</type>
</CustomField>