force-app/main/default/objects/Customer_Satisfaction_Surveys__c/fields/Tier_Level__c.field-meta.xml
<CustomField>
    <fullName>Tier_Level__c</fullName>
    <label>Tier Level</label>
    <length>18</length>
    <type>Text</type>
</CustomField>