force-app/main/default/objects/Customer_Satisfaction_Surveys__c/fields/URL__c.field-meta.xml
<CustomField>
    <fullName>URL__c</fullName>
    <formula>Survey_URL__r.Link__c</formula>
    <label>URL</label>
    <type>Text</type>
</CustomField>