force-app/main/default/objects/Customer_Satisfaction_Surveys__c/validationRules/Check_Existing_Filed.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_Existing_Filed</fullName>
    <active>false</active>
    <errorConditionFormula>Email_Duplicate_Check__c</errorConditionFormula>
    <errorMessage>You cant create record with same email</errorMessage>
</ValidationRule>