force-app/main/default/objects/Customer_Satisfaction_Surveys__c/listViews/Flight_experience.listView-meta.xml
<ListView>
    <fullName>Flight_experience</fullName>
    <columns>NAME</columns>
    <columns>Survey_Type__c</columns>
    <columns>Booking_class__c</columns>
    <columns>Departing_Date__c</columns>
    <columns>Departing_Flight_Number__c</columns>
    <columns>Departing_Airport__c</columns>
    <columns>Destination_Airport__c</columns>
    <columns>Email_Address__c</columns>
    <columns>Survey_URL__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Survey_Completed__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Survey_Type__c</field>
        <operation>equals</operation>
        <value>Flight experience</value>
    </filters>
    <label>Flight experience</label>
</ListView>