force-app/main/default/objects/Customer_Satisfaction_Surveys__c/listViews/Ticket_buying_experience.listView-meta.xml
<ListView>
    <fullName>Ticket_buying_experience</fullName>
    <columns>NAME</columns>
    <columns>Drawing_Name__c</columns>
    <columns>Survey_Type__c</columns>
    <columns>Booking_class__c</columns>
    <columns>Email_Address__c</columns>
    <columns>Survey_URL__c</columns>
    <columns>Ticket_buying_date__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Survey_Completed__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Survey_Type__c</field>
        <operation>equals</operation>
        <value>Ticket buying experience</value>
    </filters>
    <label>Ticket buying experience</label>
</ListView>